Fixed some stuff

--- a/index.html
+++ b/index.html
@@ -97,23 +97,33 @@
                 <h2>Client Testimonials</h2>
                 <p>What our clients say about our services</p>
             </div>
-            <div class="testimonial-slider">
-                <div class="testimonial-slide active">
-                    <p class="testimonial-text">"Luma Hair and Beauty transformed my look for my wedding day. The makeup was flawless and my hair stayed perfect all night. Highly recommended!"</p>
-                    <p class="testimonial-author">- Sarah W.</p>
+            <div class="testimonial-container">
+                <div class="testimonial-slider">
+                    <div class="testimonial-slide active">
+                        <p class="testimonial-text">Luma Hair and Beauty transformed my look for my wedding day. The makeup was flawless and my hair stayed perfect all night. Highly recommended!</p>
+                        <p class="testimonial-author">- Sarah W.</p>
+                    </div>
+                    <div class="testimonial-slide">
+                        <p class="testimonial-text">I've been getting my hair done at Luma for over a year now. The stylists are true professionals and always make me feel beautiful.</p>
+                        <p class="testimonial-author">- Michelle K.</p>
+                    </div>
+                    <div class="testimonial-slide">
+                        <p class="testimonial-text">The Vietnam wigs at Luma are the best quality I've found in Nairobi. They look so natural and last for months with proper care.</p>
+                        <p class="testimonial-author">- Grace M.</p>
+                    </div>
                 </div>
-                <div class="testimonial-slide">
-                    <p class="testimonial-text">"I've been getting my hair done at Luma for over a year now. The stylists are true professionals and always make me feel beautiful."</p>
-                    <p class="testimonial-author">- Michelle K.</p>
-                </div>
-                <div class="testimonial-slide">
-                    <p class="testimonial-text">"The Vietnam wigs at Luma are the best quality I've found in Nairobi. They look so natural and last for months with proper care."</p>
-                    <p class="testimonial-author">- Grace M.</p>
-                </div>
-                <div class="testimonial-dots">
-                    <span class="dot active" data-slide="0"></span>
-                    <span class="dot" data-slide="1"></span>
-                    <span class="dot" data-slide="2"></span>
+                <div class="testimonial-controls">
+                    <button class="testimonial-btn prev" aria-label="Previous testimonial">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <div class="testimonial-dots">
+                        <span class="dot active" data-slide="0"></span>
+                        <span class="dot" data-slide="1"></span>
+                        <span class="dot" data-slide="2"></span>
+                    </div>
+                    <button class="testimonial-btn next" aria-label="Next testimonial">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
             </div>
         </div>
